Allow admins to edit transaction amounts
